--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "engines": {
+    "node": "20.13.1"
+  }
+}
+
+{
   "name": "majorproject",
   "version": "1.0.0",
   "main": "index.js",
@@ -11,7 +17,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.16.1",
+    "cloudinary": "^2.6.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
@@ -19,6 +29,8 @@
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.5.4",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
